\name{SigCheckNews}
\title{SigCheck News}
\encoding{UTF-8}


\section{Version 2.3.1}{
 \itemize{
  \item{NOTE: Version 2.3.0 is a regression. The package is restored in 2.3.1.}
  \item{Section added to vignette explaining how to get signatures from MSigDB.}
  }
}

\section{Version 2.0.1}{
 \itemize{
  \item{New vignette}
  \item{Feature: construct SigCheckObject from existing SigCheckObject}
  \item{Feature: 3-group KM}
  \item{Feature: impute missing feature values}
  \item{Feature: user-defined scoring function}
  \item{minor bugs and man pages fixes}
  }
}

\section{Version 2.0.0}{
 \itemize{
  \item{Major revamp. Survival analysis, S4 object, etc.}
  }
}

\section{Version 1.0.0}{
 \itemize{
  \item{Initial release.}
  }
}