@@ -2,7 +2,7 @@ Package: SigCheck
 Type: Package
 Title: Check a gene signature's prognostic performance against
         random signatures, known signatures, and permuted data/metadata
-Version: 2.3.2
+Version: 2.3.4
 Author:  Rory Stark <rory.stark@cruk.cam.ac.uk> and 
          Justin Norden 
 Maintainer: Rory Stark <rory.stark@cruk.cam.ac.uk>
